# I-am-working

./: .gitignore  .prettierrc  README.md  electron.vite.config.mts  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.mts  vite.config.ts
.github/workflows/: test.yml
src/: app.css  index.html  main.ts  preload.ts  prompt-preload.ts  prompt.css  prompt.html  prompt.ts  renderer.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: SettingsPanel.svelte  StatsPanel.svelte
src/main/: main.ts
src/preload/: app-preload.ts  index.ts  prompt-preload.ts
src/renderer/: App.svelte  Prompt.svelte  app.css  app.ts  index.html  prompt.html  prompt.ts
src/renderer/components/: TimeDial.svelte
src/routes/: +page.svelte
src/routes/log/: +page.svelte
src/types/: global.d.ts  global.ts
